# hasqltable

./: .gitignore  CHANGELOG.md  README.md  example.csv  flake.nix  hasqltable.cabal  tbl.csv
app/: Config.hs  Main.hs  Operations.hs  Parser.hs  Parsing.hs  Types.hs  test.hs
