cabal-version:      2.4
name:               hasqltable
version:            0.9.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             BohdanQQ
maintainer:         40754203+BohdanQQ@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable hasqltable
    main-is:          Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base > 4.14.3.0, split, optparse-applicative
    hs-source-dirs:   app
    other-modules:    Types, Operations, Parser, Config, Parsing
    default-language: Haskell2010
    ghc-options:      -Wall

Test-Suite test-hasqltable
    hs-source-dirs: app
    type:       exitcode-stdio-1.0
    main-is:    test.hs
    other-modules: Types, Parser, Operations, Parsing
    build-depends: base, text, split
    default-language: Haskell2010